--- a/public/Contact.html
+++ b/public/Contact.html
@@ -7,12 +7,13 @@
 </head>
 <body>
     <h1>Contact Me</h1>
-    <p>Tel: +969 123456789</p>
+    <p>Tel: +966 123456789</p>
     <p>Email: me@gmail.com</p>
     <p>Address:</p>
     <p>
-        Mukkala City<br />
-        South Arabia Country<br />
+        Ar rusayfah Dist.<br>
+        Makkah City<br>
+        Saudi Arabia Country
     </p>
 </body>
 </html>
